--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,32 +4,37 @@ $main-white:#ffff;
   font-family: sans-serif;
   text-align: center;
   box-sizing: border-box;
-  color: white;
+  color: $main-white;
 }
 
 .center-app{
-  // margin-top: 50%;
-  padding: 50% 0%;
-  width: 300px;
+  padding: 10% 0;
 }
+
 
 // *******
 // image 
 // ******
 .moonoz-img{
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   img {
-    width: 50%;
+    width: 40%;
     height: auto;
     border-width: 10px;
-    box-shadow: -50px -20px 40px rgba(227, 135, 255, 0.25),
-    0px 50px 40px rgba(255, 219, 57, 0.3),
-    50px -20px 40px rgba(118, 255, 255, 0.3),
-    0 0 2pt 4pt rgba(255, 255, 255, 0.6);
+    box-shadow: 
+    -40px -15px 40px rgba(221, 188, 116, 0.548),
+    0px 40px 40px rgba(194, 194, 171, 0.685),
+    40px -10px 40px rgba(207, 95, 95, 0.562),
+    0 0 2pt 4pt rgba(255, 253, 253, 0.6);
     border-radius: 50%;
     object-fit: cover;
   }
 }
+
+
+// *******
+// text edits 
+// ******
 
 h1{
   font-size: 50px;
@@ -44,34 +49,15 @@ h1{
 
   }
 }
-.name-display{
-  color:#000;
-  // text-items: center;
-  // width: 40%;
-  backdrop-filter: blur(20px) saturate(153%);
-    -webkit-backdrop-filter: blur(20px) saturate(153%);
-    background-color: rgba(255, 255, 255, 0.35);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.123);
-    // animation: float 3s ease-in-out infinite;
-
-}
 
 
 // *******
 // button 
 // ******
 button{
-  margin-top:1%;
+  margin-top:1.75%;
 }
 
-
-
-
-// background gradient
-
-// 
 // ********************
 //  background gradient
 // ********************
@@ -81,14 +67,9 @@ button{
   // background: linear-gradient(-45deg, #16222A, #3A6073, );
   // background: linear-gradient(90deg, #0f2027, #203a43, #2c5364 );
   background-size: 600% 600%;
- 
-  
-
   -webkit-animation: AnimationName 10s ease infinite;
   -moz-animation: AnimationName 10s ease infinite;
   animation: AnimationName 10s ease infinite;
-  height: 100%;
-  width: 100%;
 }
 @-webkit-keyframes AnimationName {
   0%{background-position:0% 50%}
@@ -119,4 +100,27 @@ button{
     transform: translateY(0px);
     box-shadow: 0 5px 15px 0px rgb(0 0 0 / 14%);
   }
+}
+
+@media screen and (max-width: 765px){
+  .center-app{
+    padding: 50% 0;
+  }
+
+  .moonoz-img{
+    margin-bottom: 30px;
+    img {
+      width: 70%;
+      height: auto;
+      border-width: 10px;
+      box-shadow: 
+      -20px -15px 40px rgba(221, 188, 116, 0.548),
+      0px 30px 40px rgba(194, 194, 171, 0.685),
+      30px -10px 40px rgba(207, 95, 95, 0.562),
+      0 0 2pt 4pt rgba(255, 253, 253, 0.6);
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
+  
 }
