media screen adjustment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,6 +102,11 @@ button{
   }
 }
 
+
+// 
+// *********
+// media screen css
+// *********
 @media screen and (max-width: 765px){
   .center-app{
     padding: 50% 0;
