--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,9 +61,9 @@ button{
 // ********************
 //  background gradient
 // ********************
-.background-gradient{
-  // background: linear-gradient(146deg, #7f7fd5, #86a8e7, #91eae4);
-  background: linear-gradient(146deg, #3E5151, #DECBA4, );
+// .background-gradient
+body{
+  background: linear-gradient(90deg, #3E5151, #DECBA4, );
   // background: linear-gradient(-45deg, #16222A, #3A6073, );
   // background: linear-gradient(90deg, #0f2027, #203a43, #2c5364 );
   background-size: 600% 600%;
