--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,8 @@ $main-white:#ffff;
 }
 
 .center-app{
-  padding: 10% 0;
+  padding: 5% 0 10%;
 }
-
 
 // *******
 // image 
@@ -42,12 +41,11 @@ h1{
   margin-bottom: 0;
 }
 .text-dec{
-  color: #f2f6f9;
+  // color: #f2f6f9;
   opacity: 60%;
-  .text-size{
-    font-size: 25px;
-
-  }
+}
+.text-size{
+  font-size: 25px;
 }
 
 
@@ -109,7 +107,7 @@ body{
 // *********
 @media screen and (max-width: 765px){
   .center-app{
-    padding: 50% 0;
+    padding: 15% 0 5%;
   }
 
   .moonoz-img{
