--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,7 +113,7 @@ body{
 
   .text-dec{
     font-weight: bold;
-    opacity: 60%;
+    opacity: 70% !important;
   }
   .text-size{
     font-size: 25px;
